chore: fix naming in config file

--- a/notebooks/fees_and_bribs/pool_fees_and_accounting.ipynb
+++ b/notebooks/fees_and_bribs/pool_fees_and_accounting.ipynb
@@ -42,7 +42,7 @@
     "from notebooks import get_twap_bpt_price\n",
     "from config_file import CORE_POOLS\n",
     "from config_file import Chains\n",
-    "from config_file import web3_instances\n",
+    "from config_file import WEB3_INSTANCES\n",
     "\n",
     "TARGET_BLOCKS = {}\n",
     "timestamp_now = 1695952610\n",
@@ -64,7 +64,7 @@
     "        continue\n",
     "    for core_pool in pools:\n",
     "        bpt_twap_prices[chain.value][core_pool] = get_twap_bpt_price(\n",
-    "            core_pool, chain.value, getattr(web3_instances, chain.value),\n",
+    "            core_pool, chain.value, getattr(WEB3_INSTANCES, chain.value),\n",
     "            start_date=datetime.datetime.fromtimestamp(timestamp_now), block_number=target_blocks[chain.value][0]\n",
     "        )"
    ],
@@ -92,15 +92,15 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "from notebooks.fees_and_bribs.config_file import balancer_graph_urls\n",
+    "from notebooks.fees_and_bribs.config_file import BALANCER_GRAPH_URLS\n",
     "from notebooks import get_balancer_pool_snapshots\n",
     "from typing import Dict\n",
     "\n",
     "pool_snapshots = {}\n",
     "for chain in Chains:\n",
     "    pool_snapshots[chain.value] = (\n",
-    "        get_balancer_pool_snapshots(target_blocks[chain.value][0], balancer_graph_urls[chain.value]),  # now\n",
-    "        get_balancer_pool_snapshots(target_blocks[chain.value][1], balancer_graph_urls[chain.value]),  # 2 weeks ago\n",
+    "        get_balancer_pool_snapshots(target_blocks[chain.value][0], BALANCER_GRAPH_URLS[chain.value]),  # now\n",
+    "        get_balancer_pool_snapshots(target_blocks[chain.value][1], BALANCER_GRAPH_URLS[chain.value]),  # 2 weeks ago\n",
     "    )"
    ],
    "metadata": {
@@ -291,7 +291,7 @@
     "from notebooks.fees_and_bribs.config_file import REROUTE_CONFIG\n",
     "from notebooks import calculate_aura_vebal_share\n",
     "\n",
-    "aura_vebal_share = calculate_aura_vebal_share(web3_instances.mainnet, target_blocks[Chains.MAINNET.value][0])\n",
+    "aura_vebal_share = calculate_aura_vebal_share(WEB3_INSTANCES.mainnet, target_blocks[Chains.MAINNET.value][0])\n",
     "\n",
     "# Bribes are split per chain and per pool, with each pool getting a share of the bribe proportional to its share of fees\n",
     "# paid by all pools on that chain. For example, if pool A paid 10% of all fees on Arbitrum, it will get 10% of the bribes. That 10% will be distributed between aura and vebal, proportional to their share of the bribe.\n",
