--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
@@ -18,9 +18,14 @@ These payments will be streamed to stakers in the gauge by the injector and the 
 
 **ARB left over:** 171,429
 
-**Plan for leftover ARB:** Increase biweekly amount distrbuted to ___ for the remaining periods. Somehow this brings us close to the weekly amounts we had proposed in our original STIP proposal before reducing amounts.
+**Plan for leftover ARB:** Increase biweekly amount distrbuted to 205,714.8 for the remaining periods. This brings us close to the weekly amounts we had proposed in our original STIP proposal before reducing amounts. This will increase the upward trajectory on TVL and volume on Balancer while creating stickiness for the network. We are expecting a compounding partnership with Plutus and Radiant via plsRDNT to be a large driver of growth using these incentives in the upcoming weeks. 
+https://x.com/PlutusDAO_io/status/1728117332579610772?s=20
 
-**Summary of incentives:** [Insert Summary]
+Liquid staking derivative pools such as cbETH/rETH/wstETH, WETH/rETH, and ankrETH/wstETH are near all time highs for TVL which we expect to continue to climb as incentives are directed to the pools which drive LST and high volume pairs to increase depth. 
+
+**Summary of incentives:** Incentives were dispersed based on the CSV above, which shows where the ARB was sent based upon the plan outlined in [Balancer's FINAL STIP Round 1 framework](https://forum.arbitrum.foundation/t/balancer-final-stip-round-1/16689). Since Novemeber 17th key increases of TVL have been seen across various pools. This is currently not the full effect of the ARB STIP incentives though, because as pools are gaining momentum, the rewards take a one week delay to be available on AURA, the highest influence liquid wrapper on Balancer. With this delay, adoption is still taking shape on core liquidity in the ecosystem, however it is expected to continue to escalate over time. Notably the [RDNT/WETH](https://app.balancer.fi/#/arbitrum/pool/0x32df62dc3aed2cd6224193052ce665dc181658410002000000000000000003bd) pool has faciliated an average of 670k USD in volume per day while maintaing over 50MM in TVL. Liquid staking derivative pools such as [cbETH/rETH/wstETH](https://app.balancer.fi/#/arbitrum/pool/0x4a2f6ae7f3e5d715689530873ec35593dc28951b000000000000000000000481), [WETH/rETH](https://app.balancer.fi/#/arbitrum/pool/0xade4a71bb62bec25154cfc7e6ff49a513b491e81000000000000000000000497), [wstETH/WETH](https://app.balancer.fi/#/arbitrum/pool/0x9791d590788598535278552eecd4b211bfc790cb000000000000000000000498) and [ankrETH/wstETH](https://app.balancer.fi/#/arbitrum/pool/0x3fd4954a851ead144c2ff72b1f5a38ea5976bd54000000000000000000000480) are near all time highs for TVL which we expect to continue to climb as incentives are directed to the pools which drive LST and high volume pairs to increase depth. Currently total ETH LST TVL is 29.72MM and volume for the two week period in the 4 mentioned stable LST pools is over 15.26MM. Due to Balancer's core pool incentive structure, as these LST pools increase in value their market share of rewards increases as well via self sustaining bribe mechanics. 
+
+Other building blocks of liquidity on Balancer are the primary stablecoin pool, [4POOL](https://app.balancer.fi/#/arbitrum/pool/0x423a1323c871abc9d89eb06855bf5347048fc4a5000000000000000000000496) pool has has increased 15% at time of writing in TVL and is averaging 1.3MM in volume per day. Also the [4POOL/wstETH](https://app.balancer.fi/#/arbitrum/pool/0xa1a8bf131571a2139feb79401aa4a2e9482df6270002000000000000000004b4) pool plays a crucial role routing between LSTs and stablecoin liquidity. This pool since the STIP has started has been bootstrapped entirely to 920k in TVL and has done 230k in volume. 
 
 **Additional Info / Disclosures to Multisig:** [Insert additional info]
 Tags for each contract address can be found in the csv above, we would be happy to export them in some other format.   The additions here are automamtic and dyanmic based on governance and voting, so it would be nice if we could find a way to automate the address labeling process and/or bulk upload a larger addressbook in a defined format.
@@ -32,7 +37,7 @@ Tags for each contract address can be found in the csv above, we would be happy 
 **COPY ALL THE STATS FROM THE DUNE DASH TO THE FORUM BELOW ON FRIDAY AND DELETE THIS NOTE**
 
 
-**Average daily TVL:**
+**Average daily TVL:** 
 
 **Average daily transactions:** [Insert stat]
 
@@ -45,13 +50,13 @@ Tags for each contract address can be found in the csv above, we would be happy 
 
 ## Plan For the Next Two Weeks
 
-**Amount of ARB to be distributed:** [Insert amount of ARB]
+**Amount of ARB to be distributed:** 205,714.8
 
 **Contracts that will be incentivized:** [Insert all contract addresses]
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** [Insert Yes once Completed]
 
-**Mechanism for distribution incentives:** [Insert all mechanism description]
+**Mechanism for distribution incentives:** Distributions will be done every week via Balancer DAO's [ARB injector contract](https://arbiscan.io/address/0xF23d8342881eDECcED51EA694AC21C2B68440929#readContract) by sending direct incentives to the gauges of the respective pools in the Balancer ecosystem.
 
 **Summary of incentives plan:** [Insert plan]
 
