--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
@@ -28,6 +28,7 @@ Liquid staking derivative pools such as cbETH/rETH/wstETH, WETH/rETH, and ankrET
 Other building blocks of liquidity on Balancer are the primary stablecoin pool, [4POOL](https://app.balancer.fi/#/arbitrum/pool/0x423a1323c871abc9d89eb06855bf5347048fc4a5000000000000000000000496) pool has has increased 15% at time of writing in TVL and is averaging 1.3MM in volume per day. Also the [4POOL/wstETH](https://app.balancer.fi/#/arbitrum/pool/0xa1a8bf131571a2139feb79401aa4a2e9482df6270002000000000000000004b4) pool plays a crucial role routing between LSTs and stablecoin liquidity. This pool since the STIP has started has been bootstrapped entirely to 920k in TVL and has done 230k in volume. 
 
 Top stable pools: 
+
 ![Balancer_ARB_TopStablePools.png](Balancer_ARB_TopStablePools.png)
 
 **Additional Info / Disclosures to Multisig:** 
@@ -59,7 +60,9 @@ Top stable pools:
 
 **Amount of ARB to be distributed:** 205,714.8
 
-**Contracts that will be incentivized:** [Insert all contract addresses]
+**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-16_2023-11-30.csv), subject to change as more gauges are added to the veBAL system on Arbitrum. 
+
+![Arb_STIP_Gauges_10_30.png](Arb_STIP_Gauges_10_30.png)
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
