Adjusting bold text
Closes bold text at bottom of report.

--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
@@ -70,4 +70,4 @@ Top stable pools:
 
 **Summary of incentives plan:** The current incentives plan as stated above will be two pronged. Firstly, the increase in incentives weekly will closely reflect Balancer's initial proposal, thus supercharging the pools even further to attract liquidity onto the DEX. The core LST and high volume pools will see great benefits, while giving opportunity to smaller projects to bootstrap themselves on the Arbitrum network. Two second prong relates to  additional pool's of projects joining the Arbitrum ecosystem via Balancer. In the last two weeks diversification of assets on Balancer has several highlights to keep an eye on as incentives flow to them. [Plutus](https://forum.balancer.fi/t/bip-497-enable-plsrdntv2-8020rdntweth-gauge-with-a-2-weight-cap/5377/3) has joined the Balancer ecosystem with combined power of themselves, Balancer, and Radiant for an amplification of the already successful veRDNT model, possible only on Balancer. The [ANKR](https://forum.balancer.fi/t/bip-493-enable-ankr-ankreth-gauge-arbitrum/5363/3) team is also increasing their governance and LST footprint on the network this week. Lastly, the [Savy](https://forum.balancer.fi/t/bip-482-enable-savvy-tricrypto-svusd-sveth-svbtc-pool-gauge-arbitrum-with-2-emission-cap/5321/4) team is now offering their synthetic BTC, WETH, and USD assets on the network to tie into their markets.
 
-**Summary of changes to the original plan: As stated above, biweekly distributions were increased from 171429 to 205714.2 $ARB in order to pay out the full amount before February 15th as requested. Aside from the increase in incentive density, the plan will be carried out as planned, with additional gauges as they approved by Balancer governance. 
+**Summary of changes to the original plan:** As stated above, biweekly distributions were increased from 171429 to 205714.2 $ARB in order to pay out the full amount before February 15th as requested. Aside from the increase in incentive density, the plan will be carried out as planned, with additional gauges as they approved by Balancer governance. 
