--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
@@ -29,7 +29,7 @@ Other building blocks of liquidity on Balancer are the primary stablecoin pool, 
 
 Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/grantees/Balancer):
 
-![ARB_STIP_Stats_1130.png](ARB_STIP_Stats_1130.png.)
+![ARB_STIP_Stats_1130.png](ARB_STIP_Stats_1130.png)
 
 **Additional Info / Disclosures to Multisig:** 
 
