--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/01-12-2023.md
@@ -40,20 +40,20 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 ## STATS
 
-**Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?Start+date_d2264d=2023-11-17+00%3A00%3A00&End+date_daf146=2023-12-01+00%3A00%3A00)
+**Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?Start+date_d2264d=&End+date_daf146=)
 
 **COPY ALL THE STATS FROM THE DUNE DASH TO THE FORUM BELOW ON FRIDAY AND DELETE THIS NOTE**
 
 
-**Average daily TVL:** $95,693,580
+**Average daily TVL:** $96,275,018
 
-**Average daily transactions:** 605
+**Average daily transactions:** 608
 
-**Average daily volumes:** $4,316,742
+**Average daily volumes:** $4,371,128
 
-**Number of unique user addresses:** 3,766
+**Number of unique user addresses:** 4,020
 
-**Transaction fees:** Average daily: $5,450
+**Transaction fees:** Average daily: $5,662
 
 
 ## Plan For the Next Two Weeks
