--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/1-15-2023/15-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/1-15-2023/15-12-2023.md
@@ -7,12 +7,12 @@ As per the STIP rules all protocols must post bi-weekly forum updates. The secon
 
 **ARB Received Last Disbursement:** 342,858 (KYC delays resulted in collecting 2 biweekly payments at the start of the program, details in change section below)
 
-**ARB Utilized as Incentives in the Last Two Weeks: [171,429](https://arbiscan.io/tx/0x6dbc5c291e96e228feb63a71571fa5432c4b3d887b2714ba845171229fa3cf82)
+**ARB Utilized as Incentives in the Last Two Weeks: [205,714.8](https://arbiscan.io/tx/0x6dbc5c291e96e228feb63a71571fa5432c4b3d887b2714ba845171229fa3cf82)
 
 **Contracts incentivized over the last 2 weeks:** A CSV of incentived along with details about $ARB flows to each one and how they were calculated can be found [here](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-16_2023-11-30.csv).
-These amounts of payment were queued and the required 171,429 $ARB sent for payment by this [multisig transaction](https://app.onchainden.com/safes/arb1:0xb6BfF54589f269E248f99D5956f1fDD5b014D50e/transactions/0x441c87976c91cdc38ec9c54aa06a0688b1b5c92b30b70d6c6bb927b8b6479130) executed at 16:02 UTC on Friday December 1st.
+These amounts of payment were queued and the required 205,714.8 $ARB sent for payment by this [multisig transaction](https://app.onchainden.com/safes/arb1:0xb6BfF54589f269E248f99D5956f1fDD5b014D50e/transactions/0x441c87976c91cdc38ec9c54aa06a0688b1b5c92b30b70d6c6bb927b8b6479130) executed at 16:02 UTC on Friday December 1st.
 These payments will be streamed to stakers in the gauge by the injector and the gauge system for 2 weeks, ending today on December 15th.
-![ARB_STIP_Stats_1130.png](ARB_STIP_Stats_1130.png)
+![Arb_STIP_Gauges_11_30.png](Arb_STIP_Gauges_11_30.png)
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
@@ -42,8 +42,8 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 
 - Tags for each contract address can be found in the csv above.
-- As described in previous report, an extra 171,429 $ARB was collected on our first biweekly run that started November 17th, it was requested that all $ARB is paid out by February 15th.  As we were not expecting the second epoch of payments when prepairing payloads, we paid out the originally planned 171,429 $ARB, leaving 171,429 $ARB in the safe. This is how the amount of ARB per round increased.
-  - Going forward, this 171,429 will be paid out evenly throughout the remaining rounds.  Details can be seen on [this sheet](https://docs.google.com/spreadsheets/d/1k4i9ZNpxiRDC_bl4JtZMldV7J0LRQEVHZNqVpj8xG0g/edit#gid=0)
+- As described in previous report, an extra 171,429 $ARB was collected on our first biweekly run that started November 17th, it was requested that all $ARB is paid out by February 15th.  As we were not expecting the second epoch of payments, going forward, 205,714.8 will be paid out evenly throughout the remaining rounds.  Details can be seen on [this sheet](https://docs.google.com/spreadsheets/d/1k4i9ZNpxiRDC_bl4JtZMldV7J0LRQEVHZNqVpj8xG0g/edit#gid=0)
+- During reviews we discovered a bug in dynamic boost calculation which depends on pool fees. We fixed it and now boost is calculated properly, giving more boost to large LST pools and putting down small TVL/Volume pools into lower ARB distribution bracket
 
 ## STATS
 
@@ -67,9 +67,9 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 **Amount of ARB to be distributed:** 205,714.8
 
-**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-16_2023-11-30.csv), subject to change as more gauges are added to the veBAL system on Arbitrum. -NEEDS UPDATE-
+**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-30_2023-12-14.csv), subject to change as more gauges are added to the veBAL system on Arbitrum.
 
-- NEW ROUND CSV IMAGE OR TABLE NEEDED - 
+![Arb_STIP_Gauges_12_15.png](Arb_STIP_Gauges_12_15.png)
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
