--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/15-12-2023/15-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/15-12-2023/15-12-2023.md
@@ -12,7 +12,7 @@ As per the STIP rules all protocols must post bi-weekly forum updates. The secon
 **Contracts incentivized over the last 2 weeks:** A CSV of incentived along with details about $ARB flows to each one and how they were calculated can be found [here](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-16_2023-11-30.csv).
 These amounts of payment were queued and the required 205,714.8 $ARB sent for payment by this [multisig transaction](https://app.onchainden.com/safes/arb1:0xb6BfF54589f269E248f99D5956f1fDD5b014D50e/transactions/0x441c87976c91cdc38ec9c54aa06a0688b1b5c92b30b70d6c6bb927b8b6479130) executed at 16:02 UTC on Friday December 1st.
 These payments will be streamed to stakers in the gauge by the injector and the gauge system for 2 weeks, ending today on December 15th.
-![Arb_STIP_Gauges_12_15.png](Arb_STIP_Gauges_12_15.png)
+![Arb_STIP_Gauges_11_30.png](Arb_STIP_Gauges_11_30.png)
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
@@ -47,20 +47,20 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 ## STATS
 
-**Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?Start+date_d2264d=&End+date_daf146=)
+**Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?End+date_daf146=&Start+date_d2264d=&End+date_d75e58=2023-12-14+00%3A00%3A00&Start+date_d524c0=2023-12-01+00%3A00%3A00)
 
 **COPY ALL THE STATS FROM THE DUNE DASH TO THE FORUM BELOW ON FRIDAY AND DELETE THIS NOTE**
 
 
-**Average daily TVL:** $109,501,087
+**Average daily TVL:** $108,024,193
 
-**Average daily transactions:** TBD
+**Average daily transactions:** 649
 
-**Average daily volumes:** $7,505,407
+**Average daily volumes:** $7,059,866
 
-**Number of unique user addresses:** TBD
+**Number of unique user addresses:** 3224
 
-**Transaction fees:** Average daily: $8,039
+**Transaction fees:** Average daily: $8,244
 
 
 ## Plan For the Next Two Weeks
