First Draft - Complete
Added in images and updated outlook for upcoming round. Completed last rounds highlights and included info on sFRAX being the upcoming narrative, while plsRDNT and sfrxETH pool are still strong and gaining momentum. LST stats look great. Any feedback more than welcome.

--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/29-12-2023/29-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/29-12-2023/29-12-2023.md
@@ -30,13 +30,11 @@ The total ETH LST TVL is over 47.5MM at this point, for reference the previous r
 
 The pools dedicated to routing liquidity on Balancer supported by the ARB STIP are the 4POOL and the 4POOL/wstETH pair. The [4POOL](https://app.balancer.fi/#/arbitrum/pool/0x423a1323c871abc9d89eb06855bf5347048fc4a5000000000000000000000496) pool has has increased another 5% at time of writing in TVL to 5.15MM in the two week span and is averaging 1.9MM compared to previously 2.2MM in volume per day. The [4POOL/wstETH](https://app.balancer.fi/#/arbitrum/pool/0xa1a8bf131571a2139feb79401aa4a2e9482df6270002000000000000000004b4) pool is at it's all time high, just under 1.2MM in TVL. The volume over a two week period is holding steady at 500k for both this period and 500k for the previous. 
 
-[Savy](https://forum.balancer.fi/t/bip-482-enable-savvy-tricrypto-svusd-sveth-svbtc-pool-gauge-arbitrum-with-2-emission-cap/5321/4), [ANKR](https://forum.balancer.fi/t/bip-493-enable-ankr-ankreth-gauge-arbitrum/5363/3) , and[Plutus](https://forum.balancer.fi/t/bip-497-enable-plsrdntv2-8020rdntweth-gauge-with-a-2-weight-cap/5377/3) were all mentioned last round as pools to keep an eye out for. The Savy and ANKR pools have yet to take part in the incentives cycle, and TVL respectively are at 128k and 18k. We will report further on these if they do begin to receive ARB.
-
-The Plutus plsRDNT pool has begun to climb the charts though, as incentives from Radiant and Plutus have gone live via Aura. The pool will receive its first round of Balancer STIP incentives in the upcoming round. 
+Two pools we mentioned to focus on for this upcoming round were [plsRDNT](https://app.balancer.fi/#/arbitrum/pool/0x451b0afd69ace11ec0ac339033d54d2543b088a80000000000000000000004d5) and the [sfrxETH tripool](https://app.balancer.fi/#/arbitrum/pool/0x0c8972437a38b389ec83d1e666b69b8a4fcf8bfd00000000000000000000049e). Both pools have climbed in TVL quickly this round with the plsRDNT pool at 800k TVL and sfrxETH tripool just over 1MM in 100% liquid staking derivatives of ETH. These pools are high fee earners in terms of organic yield from the underlying assets. We expect both of these pools to continue to scale up in the coming rounds. 
 
 Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/grantees/Balancer):
 
-![ARB_STIP_Stats_12_13.png](ARB_STIP_Stats_12_13.png)
+![ARB_STIP_Stats_12_14.png](ARB_STIP_Stats_12_14.png)
 
 **Additional Info / Disclosures to Multisig:** 
 
@@ -47,32 +45,36 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 ## STATS
 
-**Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?Start+date_d2264d=&End+date_daf146=)
+**Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?End+date_daf146=&Start+date_d2264d=&End+date_d75e58=2023-12-28+00%3A00%3A00&Start+date_d524c0=2023-12-15+00%3A00%3A00)
 
 **COPY ALL THE STATS FROM THE DUNE DASH TO THE FORUM BELOW ON FRIDAY AND DELETE THIS NOTE**
 
 
-**Average daily TVL:** $109,501,087
+**Average daily TVL:** $121,744,263
 
-**Average daily transactions:** TBD
+**Average daily transactions:** 606
 
-**Average daily volumes:** $7,505,407
+**Average daily volumes:** $6,684,114
 
-**Number of unique user addresses:** TBD
+**Number of unique user addresses:** 3030
 
-**Transaction fees:** Average daily: $8,039
+**Transaction fees:** Average daily: $10,795
 
 
 ## Plan For the Next Two Weeks
 
 **Amount of ARB to be distributed:** 205,714.8
 
-**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-16_2023-11-30.csv), subject to change as more gauges are added to the veBAL system on Arbitrum. -NEEDS UPDATE-
+**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/STIP_automation/blob/last-round-2023/output/dao_grant_2023-12-14_2023-12-28.csv), subject to change as more gauges are added to the veBAL system on Arbitrum.
+
+![Arb_STIP_Gauges_12_28.png](Arb_STIP_Gauges_12_28.png)
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
 **Mechanism for distribution incentives:** Distributions will be done every week via Balancer DAO's [ARB injector contract](https://arbiscan.io/address/0xF23d8342881eDECcED51EA694AC21C2B68440929#readContract) by sending direct incentives to the gauges of the respective pools in the Balancer ecosystem.
 
-**Summary of incentives plan:** Incentives will be heading to the pools mentioned above over the next two week period. The pools Balancer expects to be highlights of the next report are the ones mentioned above, and these new pools joining the Arbitrum ecosystem. The [plsRDNT](https://app.balancer.fi/#/arbitrum/pool/0x451b0afd69ace11ec0ac339033d54d2543b088a80000000000000000000004d5) pool which will be kickstarted increasing in magnitude over time as it scales up. This will have second order affects permanently locking RDNT/WETH tokens on the platform. The new LST pool to bring more yield bearing liquidity to the ecosystem is the [sfrxETH tripool](https://app.balancer.fi/#/arbitrum/pool/0x0c8972437a38b389ec83d1e666b69b8a4fcf8bfd00000000000000000000049e). While TVL is negligent currently, Balancer has placed a bribe to get incentives started and begin bootstrapping another LST juggernaught.   
+**Summary of incentives plan:** The incentives structure will continue to be carried out as planned since the original awarding of the STIP. As new pools join the ecosystem there will be competition between the most efficient ones on a fee per emission basis to determine where the majority of incentives are directed. More efficient pools receive more incentives and over time facilitate the optimal use of ARB for the liquidity hosted by Balancer on Arbitrum. As new strong contendors join the ecosystem the competition becomes more fierce between pools, ultimatley leading to more TVL, fees, and diversity on the platform.
 
-**Summary of changes to the original plan:** As stated above, biweekly distributions were increased from 171429 to 205714.2 $ARB in order to pay out the full amount before February 15th as requested. Aside from the increase in incentive density, the plan will be carried out as planned, with additional gauges as they approved by Balancer governance. 
+The newest pools to look out for this round are those which have sFRAX in them, the yield bearing staked FRAX stablecoin in them. Yield bearing stablecoins addd a layer of capital efficiency for LPs where they are risk off in a dollars denominated sense, but accrue yield on their position. The two pools which will be incentivized this upcoming round are the [sFRAX/4POOL](https://app.balancer.fi/#/arbitrum/pool/0x2ce4457acac29da4736ae6f5cd9f583a6b335c270000000000000000000004dc) and [sFRAX/wstETH](https://app.balancer.fi/#/arbitrum/pool/0xc757f12694f550d0985ad6e1019c4db4a803f1600002000000000000000004de), offering more organic yield for users than a typical stablecoin pool or stablecoin/WETH pairing. We look forward to the adoption of Frax into our ecosystems, and expect these pools to be popular in the near future. 
+
+**Summary of changes to the original plan:** As stated in prior reports, biweekly distributions are 205714.2 $ARB in order to pay out the full amount before February 15th as requested. The original proposal will be carried out as planned, with additional gauges as they approved by Balancer governance. 
