Update - Trits comments
Discussed with Tritium to update some values in the report which were outdated and add in the information regarding BIP-522 improving boost schematic and sFRAX fixed incentives.

--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/29-12-2023/29-12-2023.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/29-12-2023/29-12-2023.md
@@ -7,7 +7,7 @@ As per the STIP rules all protocols must post bi-weekly forum updates. The secon
 
 **ARB Received Last Disbursement:** 342,858 (KYC delays resulted in collecting 2 biweekly payments at the start of the program, details in change section below)
 
-**ARB Utilized as Incentives in the Last Two Weeks: [171,429](https://arbiscan.io/tx/0x24488fd95589c8f78077c517862011b1a1531d2ccb6e8b49367d1cf11aeacd7f)
+**ARB Utilized as Incentives in the Last Two Weeks: [205,249](https://arbiscan.io/tx/0x24488fd95589c8f78077c517862011b1a1531d2ccb6e8b49367d1cf11aeacd7f)
 
 **Contracts incentivized over the last 2 weeks:** A CSV of incentived along with details about $ARB flows to each one and how they were calculated can be found [here](https://github.com/BalancerMaxis/data_automation/blob/main/notebooks/arb_dao_grant_distribution/output/dao_grant_2023-11-16_2023-11-30.csv).
 These amounts of payment were queued and the required 171,429 $ARB sent for payment by this [multisig transaction](https://app.onchainden.com/safes/arb1:0xb6BfF54589f269E248f99D5956f1fDD5b014D50e/transactions/0x7e550b33e7fd3efe670263fab17448f20a68e8e5054dafb48b5b885c2012faf1) executed at 20:43 UTC on Friday December 15th.
@@ -16,11 +16,11 @@ These payments will be streamed to stakers in the gauge by the injector and the 
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
-**ARB left over:** 137,143.2
+**ARB left over:** 102,857.4
 
-**Plan for leftover ARB:** Two rounds ago, the decision was made to increase biweekly amount distrbuted to 205,714.8 for the remaining periods. The higher incentive amount coupled with favorable market conditions have led to a large increase in productive TVL on Balancer which will be outlined in detail in the summary section. The plan for Balancer is the same as it has been from the start, continue to target liquid staking derivatives for Ethereum and create a sticky liquidity cycle on the Arbitrum network. 
+**Plan for leftover ARB:** The leftover ARB will be paid out over the following rounds as described in prior reports by distributing 205,714.8 for the remaining periods. The incentive amount coupled with favorable market conditions have led to a large increase in productive TVL on Balancer which will be outlined in detail in the summary section. The plan for Balancer is the same as it has been from the start, continue to target liquid staking derivatives for Ethereum and create a sticky liquidity cycle on the Arbitrum network. 
 
-Expanding on this point, Balancer continues to expand the diversity on Arbitrum with new yield bearing assets each round. Ethereum LSTs will cotninue to expand as the core pool flywheel is amplified by ARB, and plsRDNT has began to take off on Balancer as the hub for permalocked Radiant dlp. The next yield bearing asset to keep an eye out for is sFRAX, a stablecoin which will quietly begin to take over the market on Balancer with yield for our set and forget LPs to be able to count on as a capital efficient core pool. 
+Drilling down on this point, Balancer continues to expand the diversity on Arbitrum with new yield bearing assets each round. Ethereum LSTs will cotninue to thicken as the core pool flywheel is amplified by ARB, and plsRDNT has began to take off on Balancer as the hub for permalocked Radiant dlp. The next yield bearing asset to keep an eye out for is sFRAX, a stablecoin which will quietly begin to take over the market on Balancer with yield for our set and forget LPs to be able to count on as a capital efficient core pool. 
 
 **Summary of incentives:** Incentives were dispersed based on the CSV above, which shows where the ARB was sent based upon the plan outlined in [Balancer's FINAL STIP Round 1 framework](https://forum.arbitrum.foundation/t/balancer-final-stip-round-1/16689). As mentioned in the prior report, there was a correction made to the dynamic boost which pushes a larger share of incentives towards the higher performing pools in terms of fees earned. This, like the Balancer core pool models is one of the layers of optimization engineering our team works on day in and day out. This round has seen a much more efficient direction of incentives, and we can see the results begin to take affect. Our team is excited to see this adjustment continue to unfold on the network. 
 
@@ -46,9 +46,6 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 ## STATS
 
 **Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?End+date_daf146=&Start+date_d2264d=&End+date_d75e58=2023-12-28+00%3A00%3A00&Start+date_d524c0=2023-12-15+00%3A00%3A00)
-
-**COPY ALL THE STATS FROM THE DUNE DASH TO THE FORUM BELOW ON FRIDAY AND DELETE THIS NOTE**
-
 
 **Average daily TVL:** $121,744,263
 
@@ -78,3 +75,7 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 The newest pools to look out for this round are those which have sFRAX in them, the yield bearing staked FRAX stablecoin in them. Yield bearing stablecoins addd a layer of capital efficiency for LPs where they are risk off in a dollars denominated sense, but accrue yield on their position. The two pools which will be incentivized this upcoming round are the [sFRAX/4POOL](https://app.balancer.fi/#/arbitrum/pool/0x2ce4457acac29da4736ae6f5cd9f583a6b335c270000000000000000000004dc) and [sFRAX/wstETH](https://app.balancer.fi/#/arbitrum/pool/0xc757f12694f550d0985ad6e1019c4db4a803f1600002000000000000000004de), offering more organic yield for users than a typical stablecoin pool or stablecoin/WETH pairing. We look forward to the adoption of Frax into our ecosystems, and expect these pools to be popular in the near future. 
 
 **Summary of changes to the original plan:** As stated in prior reports, biweekly distributions are 205714.2 $ARB in order to pay out the full amount before February 15th as requested. The original proposal will be carried out as planned, with additional gauges as they approved by Balancer governance. 
+
+There has been one change which is not major, but tips the scale further in favor of productive liqudity which are useful to both Arbitrum and Balanceer. Last week, Balancer passed [BIP-522](https://forum.balancer.fi/t/bip-522-arbitrum-lgp-and-stip-adjustments/5473) which essentially changes the boosting system of the ARB STIP program. Without changing the core logic, the BIP changes the automation to boost productive liquidity 3x more in order terms of distribution of ARB rewards. The goal being to prevent low performance pools from gaining high amounts of incentives without producing a high amount of fees. 
+
+The fixed incentives which were initially directed at the 4POOL and wstETH/4POOL will now be pointed towards the sFRAX/4POOL and sFRAX/wstETH pool in order to leverage the interest bearing nature of sFRAX for LPs. This make the adoption of Frax into the ecosystem much more streamlined, while earning more passive yield for LPs. With these changes in place, we intend to push the desirable outcomes of the Arbitrum Foundation, namely productive TVL, volume, and fees upwards by reaffirming that ARB will be sent to useful pools. 
