--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/26-1-2024/26-1-2024.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/26-1-2024/26-1-2024.md
@@ -12,7 +12,7 @@ As per the STIP rules all protocols must post bi-weekly forum updates. The secon
 **Contracts incentivized over the last 2 weeks:** A CSV of incentived along with details about $ARB flows to each one and how they were calculated can be found [here](https://github.com/BalancerMaxis/STIP_automation/blob/9c0791acfec184c114f840444bb1c4d183c9cbf4/output/dao_grant_2023-12-28_2024-01-11.csv).
 These amounts of payment were queued and the required 82,285.3 $ARB sent for payment by this [multisig transaction](https://app.onchainden.com/safes/arb1:0xb6BfF54589f269E248f99D5956f1fDD5b014D50e/transactions/0x068bd0f58720eb6a57167df5ce7f8e0a4a9cc16bccd25df2fea13fd75c207322) executed at 15:57 UTC on Friday January 12th.
 These payments were be streamed to stakers in the gauge by the injector and the gauge system for 2 weeks, ending today on January 26th.
-![ARB_STIP_Stats_11_1.png](ARB_STIP_Stats_11_1.png)
+![ARB_STIP_Gauges_11_1.png](ARB_STIP_Gauges_11_1.png)
 
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
